# SightRead

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: compiler-warnings.yml  static-analysis.yml  tests.yml
cmake/: Sanitisers.cmake
fuzzing_targets/: CMakeLists.txt  chart_fuzzer.cpp  ini_fuzzer.cpp  midi_fuzzer.cpp  qbmidi_fuzzer.cpp
include/sightread/: chartparser.hpp  drumsettings.hpp  hopothreshold.hpp  metadata.hpp  midiparser.hpp  qbmidiparser.hpp  soloparsingbehaviour.hpp  song.hpp  songparts.hpp  tempomap.hpp  time.hpp
src/sightread/: bindings.cpp  chartparser.cpp  metadata.cpp  midiparser.cpp  qbmidiparser.cpp  song.cpp  songparts.cpp  tempomap.cpp
src/sightread/detail/: chart.cpp  chartconverter.cpp  chartconverter.hpp  intervalset.hpp  midi.cpp  midiconverter.cpp  midiconverter.hpp  parserutil.cpp  parserutil.hpp  qbmidi.cpp  qbmidi.hpp  qbmidiconverter.cpp  qbmidiconverter.hpp  stringutil.cpp  stringutil.hpp  timeconversionmap.cpp  timeconversionmap.hpp  utils.hpp
tests/: .clang-tidy
tests/sightread/: chartparser_unittest.cpp  metadata_unittest.cpp  midiparser_unittest.cpp  song_unittest.cpp  songparts_unittest.cpp  tempomap_unittest.cpp  test_helpers.hpp  test_main.cpp  testhelpers.hpp  time_unittest.cpp
tests/sightread/detail/: chart_unittest.cpp  intervalset_unittest.cpp  midi_unittest.cpp  midiconverter_unittest.cpp  stringutil_unittest.cpp  timeconversionmap_unittest.cpp
wasm-test/: build.sh  index.html
